<resources>
    <string name="app_name">CDR</string>
    <string name="title_activity_main">CDR</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="formula_nav_drawer">Dice Formula</string>
    <string name="die_nav_drawer">Dice</string>
    <string name="dice_group_nav_drawer">Dice Groups</string>
    <string name="settings_nav_drawer">Settings</string>
    <string name="other_nav_group">Other</string>

    <string name="individual_first_text">Show individual results first</string>
    <string name="google_drive_text">Save Dice to Google Drive (Might not work properly, data loss is possible)</string>
    <string name="theme_text">Light Theme</string>
    <string name="default_section">Default Section</string>

    <string name="individual">Individual</string>
    <string name="combined">Combined</string>

    <string name="g_plus_option">G+ Community</string>
    <string name="title_activity_splash_screen">SplashScreen</string>

    <string name="add_dice">Add Dice</string>
    <string name="add_dice_group">Add Dice Group</string>
    <string name="clear">Clear</string>

    <string name="simple_side">Simple Side</string>
    <string name="complex_side">Complex Side</string>
    <string name="roll">Roll</string>

    <string name="modifier">Modifier</string>

    <string name="simple_side_hint">Number or Text</string>
    <string name="delete">Delete</string>
    <string name="number">Number:</string>
    <string name="add_part">Add Part</string>

    <string name="rename">Rename</string>
    <string name="rename_dialog">Name:</string>

    <string name="number_die">Number Die</string>
    <string name="custom_die">Custom Die</string>

    <string name="side_number">Dice Sides</string>
    <string name="dice_number">Number of dice</string>

    <string name="delete_confirmation">Are you sure you want to delete?</string>

    <string name="new_die">New Die</string>
    <string name="new_group">New Group</string>

    <string name="name">Name:</string>

    <string name="invalid_name">Names cannot contain {,},+, or -</string>
    <string name="overwrite_warning_die">There is already another die by this name, if you continue that die will be overwritten</string>
    <string name="overwrite_warning_group">There is already another dice group by this name, if you continue that group will be overwritten</string>

    <string name="upload_profiles_drive">Do you want to upload your existing dice and dice groups?</string>

    <string name="sync_waiting">Downloading and uploading dice</string>

    <string name="something_went_wrong">Oops, something went wrong</string>

    <string name="needs_one_side">Please add at least one side</string>

    <string name="empty_formula">Please type something in</string>
    <string name="invalid_formula">Formula is invalid</string>

    <string name="help_translate">Help Translate!</string>
</resources>
