<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/formula"
        android:icon="@drawable/function"
        android:title="@string/formula_nav_drawer" />
    <item
        android:id="@+id/die"
        android:icon="@drawable/custom_die"
        android:title="@string/die_nav_drawer" />
    <item
        android:id="@+id/dice"
        android:icon="@drawable/dice_stack"
        android:title="@string/dice_group_nav_drawer" />
    <item android:title="@string/other_nav_group">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/gear"
                android:title="@string/settings_nav_drawer" />
        </menu>
    </item>
</menu>
